full website using javascript file only

--- a/style.css
+++ b/style.css
@@ -57,3 +57,14 @@
 .watchkitPara {
   padding: 1%;
 }
+
+.likesBar {
+  background-color: #e6943b;
+  padding-left: 10px;
+}
+
+.container4 {
+  margin-left: 3%;
+  margin-right: 3%;
+
+}
